2010-11-23  Robert Larice
 * src/ciderlib/oned/oneprint.c ,
 * src/ciderlib/support/globals.c ,
 * src/ciderlib/support/mater.c ,
 * src/ciderlib/twod/twoprint.c :
    attract gcc's attention to some printf format strings (for type checking)

2010-11-23  Robert Larice
 * src/frontend/inpcom.c ,
 * src/frontend/plotting/grid.c :
    swallow type conversion warnings

2010-11-23  Robert Larice
 * src/xspice/ipc/ipcaegis.c :
    fix an ancient bug (typo `!=' versus `=!')

2010-11-23  Robert Larice
 * src/spicelib/analysis/cktsopt.c ,
 * src/spicelib/analysis/dctrcurv.c ,
 * src/spicelib/devices/bjt/bjtparam.c ,
 * src/spicelib/devices/bjt2/bjt2param.c ,
 * src/spicelib/devices/bsim2/b2mpar.c ,
 * src/spicelib/devices/dio/dioparam.c ,
 * src/spicelib/devices/jfet/jfetpar.c ,
 * src/spicelib/devices/jfet2/jfet2par.c ,
 * src/spicelib/devices/mos1/mos1par.c ,
 * src/spicelib/devices/mos2/mos2par.c ,
 * src/spicelib/devices/mos3/mos3par.c ,
 * src/spicelib/devices/mos6/mos6par.c ,
 * src/spicelib/devices/mos9/mos9par.c ,
 * src/spicelib/devices/soi3/soi3par.c ,
 * src/spicelib/devices/vbic/vbicparam.c :
    swallow type conversion warnings (assignment of int to unsigned:1 flags)
    actually this fix changes the semantic from
      true if and only if given number is odd
    to
      true if and only if given number != 0

2010-11-22  Robert Larice
 * src/frontend/parse-bison.c ,
 * src/spicelib/parser/inpptree-parser.c :
    touch (timestamp) bison output files
       to make sure bison won't be needed on a fresh CVS checkout

2010-11-22  Robert Larice
 * src/xspice/icm/digital/d_source/cfunc.mod :
    d_source, bug fix

    The recently added d_source test-case
      did reveal a bug in the implementation of d_source.
    The test-case fails in the non-debug version of ngspice.
    In src/xspice/icm/digital/d_source/cfunc.mod the following
    floating point identity comparison won't match.
    >>  if ( TIME == test_double ) { /* Breakpoint reached */